--- a/css/appendix-data.css
+++ b/css/appendix-data.css
@@ -124,6 +124,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  scrollbar-width: thin;
 }
 
 body {
