--- a/css/sixteenthcenturydiplomats_screen.css
+++ b/css/sixteenthcenturydiplomats_screen.css
@@ -124,6 +124,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    scrollbar-width: thin;
 }
 
 body {
@@ -382,6 +383,7 @@ h4 {
     margin-top: 10px;
     margin-left: 5px;
     margin-bottom: 25px;
+    scrollbar-width: thin;
 }
 
 #article::-webkit-scrollbar {
